Mutable/Immutable Location System + Start on Particle System.

--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,13 @@
     </dependency>
 	
 	<dependency>
+	  <groupId>org.bukkit</groupId>
+      <artifactId>craftbukkit</artifactId>
+      <version>1.11.2-R0.1-SNAPSHOT</version>
+      <scope>provided</scope>
+    </dependency>
+	
+	<dependency>
       <groupId>org.mongodb</groupId>
       <artifactId>mongo-java-driver</artifactId>
       <version>3.3.0</version>
