--- a/src/main/java/plugin.yml
+++ b/src/main/java/plugin.yml
@@ -2,3 +2,4 @@ name: Cantaloupe
 version: 0.01a
 description: A framework / wrapper used to allow cross-platform plugin development.
 main: org.cantaloupe.main.CantaloupeMain
+depend: [Multiverse-Core]
