--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "documentation"]
-	path = documentation
+[submodule "doc"]
+	path = doc
 	url = https://github.com/Dysche/Cantaloupe-docs
